# picasa2digikam

./: .gitignore  README.md  digikam_db.py  main.py  migrator.py  pyproject.toml  rect64.py  rect64_test.py
.github/workflows/: tests.yml
picasa2digikam/: digikam_db.py  main.py  migrator.py  rect64.py
tests/: test_rect64.py
